# rust-vid-streamer

./: Cargo.toml  LICENSE  README.md
scripts/: basic-stream.sh  basic-webcam-stream.sh  receive-test.sh  rtsp-client.sh  webcam-record.sh  webcam-test.sh
src/: main.rs
