[package]
name = "rust-vid-streamer"
version = "0.1.0"
authors = ["Jaclyn Brockschmidt <jcbrockschmidt@gmail.com>"]
edition = "2018"

[[bin]]
name = "streamer"
path = "src/streamer/bin/main.rs"

[[bin]]
name = "receiver"
path = "src/receiver/bin/main.rs"

[dependencies]
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
ctrlc = "^3.1.3"
