[package]
name = "rust-vid-streamer"
version = "0.1.0"
authors = ["Jaclyn Brockschmidt <jcbrockschmidt@gmail.com>"]
edition = "2018"

[[bin]]
name = "streamer"
path = "src/streamer/bin/main.rs"

[[bin]]
name = "receiver"
path = "src/receiver/bin/main.rs"

[[bin]]
name = "recorder"
path = "src/recorder/bin/main.rs"

[[bin]]
name = "rtsp-server"
path = "src/rtsp-server/bin/main.rs"

[dependencies]
ctrlc = "^3.1.3"
glib = "^0.9.3"
gstreamer = "^0.15.2"
gstreamer-rtsp = "^0.15.0"
gstreamer-rtsp-server = "^0.15.5"